--- a/index.html
+++ b/index.html
@@ -413,5 +413,6 @@
         });
     </script>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
